--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@ ${fixedUrl}
 `;
   document.getElementById('playlistOutput').textContent = output.trim();
 
-  // 👉 redirect หลังจากแสดงผล
-    window.location.href = 'https://www.google.com';
+    // window.location.href = 'https://www.google.com';
 
 }
 
