--- a/digitaltv.html
+++ b/digitaltv.html
@@ -77,5 +77,14 @@ https://live-la4.aws-stream.com:9317/v3/NgO-C90RHKjd0onr1UTSrw/1743933282/5a4a06
       }
     })();
   </script>
+
+#EXTM3U
+
+########################################
+### Uflix ###
+########################################
+
+#EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-1.png",EPL-1
+https://live-la4.aws-stream.com:9317/v3/NgO-C90RHKjd0onr1UTSrw/1743933282/5a4a06c4c9dec85ca749eb9760529f8d/lpflWqbqHMmvhA1ixanC_g/1743954862/live/vx-origin/uflix-epl1_720/chunks.m3u8
 </body>
 </html>
