Update thaiseries.html 4554

--- a/thaiseries.html
+++ b/thaiseries.html
@@ -8,10 +8,10 @@
 	
     <style>
         .hidden-link {
-            display: none;
+            display: flex;
             }
         .invisible-link {
-            visibility: hidden;
+            visibility: none;
         }
  </style>
 <style>.hiddenx-link {
