--- a/pornbox.html
+++ b/pornbox.html
@@ -28,7 +28,9 @@ https://ezycdn.com/playlist-5k7a4kfr-FHD.m3u8
 #EXTINF:-1 group-title="JAV SUBTHAI" tvg-logo="https://pics.dmm.co.jp/digital/video/midv00266/midv00266pl.jpg",MIDV-266 ทริปสลับคู่ เล่นชู้กับแฟนเพื่อน
 https://live-la5.aws-stream.com:9318/v3/H0bftUpGStugQb75y_LnbA/1743948992/5a4a06c4c9dec85ca749eb9760529f8d/dv8sn5kmPQIIUWk59lsZZQ/1743970572/live/vx-origin/uflix-epl1_720/chunks.m3u8
 
-
+#EXTINF:-1 group-title="JAV SUBTHAI" tvg-logo="https://rentapi.blackboxsys.net/images/png/epl-1.png",EPL 01
+#EXTVLCOPT:http-referrer=https://99dooball.com/
+https://cdn2.aws-live-streaming.com/lsmscore/epl1_sd/chunks.m3u8
 
 }</style>
 
