--- a/test2.html
+++ b/test2.html
@@ -5,15 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dynamic M3U Playlist</title>
 </head>
+<body>
 
-</html>
- #EXTM3U
+  <h2>🔗 Playlist Output</h2>
+  <textarea id="playlistOutput" rows="15" cols="100" style="white-space: pre;"></textarea>
 
-#EXTINF:-1 group-title="ช่องกีฬาทั่วไป" tvg-logo="https://rentapi.blackboxsys.net/images/png/epl-1.png",EPL 0222
+  <script>
+    const url = "https://live-la5.aws-stream.com:9318/v3/H0bftUpGStugQb75y_LnbA/1743948992/5a4a06c4c9dec85ca749eb9760529f8d/dv8sn5kmPQIIUWk59lsZZQ/1743970572/live/vx-origin/uflix-epl1_720/chunks.m3u8";
+
+    const playlist = `
+#EXTM3U
+
+#EXTINF:-1 group-title="ช่องกีฬาทั่วไป" tvg-logo="https://rentapi.blackboxsys.net/images/png/epl-1.png",EPL 0555
 #EXTVLCOPT:http-referrer=https://cloud.ufxtv.com/
 #EXTVLCOPT:http-user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/134.0.0.0 Safari/537.36
 #EXTVLCOPT:http-origin=https://cloud.ufxtv.com
 #EXTVLCOPT:http-accept=*/*
 #EXTVLCOPT:http-accept-encoding=gzip, deflate, br, zstd
 #EXTVLCOPT:http-accept-language=en-US,en;q=0.9,th;q=0.8
-https://live-la5.aws-stream.com:9318/v3/H0bftUpGStugQb75y_LnbA/1743948992/5a4a06c4c9dec85ca749eb9760529f8d/dv8sn5kmPQIIUWk59lsZZQ/1743970572/live/vx-origin/uflix-epl1_720/chunks.m3u8
+${url}
+    `.trim();
+
+    document.getElementById("playlistOutput").value = playlist;
+  </script>
+
+</body>
+</html>
