--- a/test2.html
+++ b/test2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TV</title>
+  <title>เล่น M3U8 ทันที</title>
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
     body {
@@ -52,6 +52,18 @@
     .channel-button:focus {
       background-color: #444;
     }
+
+    .channel-number {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      font-size: 36px;
+      color: #fff;
+      background-color: rgba(0, 0, 0, 0.5);
+      padding: 10px;
+      border-radius: 10px;
+      display: none;
+    }
   </style>
 </head>
 <body>
@@ -60,11 +72,14 @@
 
   <div class="channels" id="channels"></div>
 
+  <div id="channelNumber" class="channel-number">12</div>
+
+
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   
   <script>
     const video = document.getElementById('video');
-
+    const channelNumberDiv = document.getElementById('channelNumber');
     function toggleBorder() {
     if (document.fullscreenElement || document.webkitFullscreenElement || document.mozFullScreenElement) {
       video.style.border = 'none';  // ลบ border เมื่อเต็มจอ
@@ -96,7 +111,20 @@
     const channelNames = [
       'ช่อง EPL 1', 'ช่อง EPL 1 Backup', 'ช่อง EPL 2', 'ช่อง EPL 2 Backup',
       'ช่อง EPL 3', 'ช่อง EPL 3 Backup', 'ช่อง EPL 4', 'ช่อง EPL 4 Backup',
-      'ช่อง EPL 5', 'ช่อง EPL 5 Backup'
+      'ช่อง EPL 5', 'ช่อง EPL 5 Backup','ช่อง Bein 1', 'ช่อง Bein 1 Backup',
+      'ช่อง Bein 2', 'ช่อง Bein 2 Backup','ช่อง Bein 3', 'ช่อง Bein 3 Backup',
+      'ช่อง Bein HD 1',
+      'ช่อง Bein HD 2',
+      'ช่อง Bein HD 3',
+      'ช่อง Bein HD 4',
+      'ช่อง Bein HD 5',
+      'ช่อง Bein HD 6',
+      'ช่อง Bein HD 7',
+      'ช่อง Bein HD 8',
+      'ช่อง Bein HD 9',
+      'ช่อง Bein HD 10',
+      'ช่อง Bein HD 11',
+      'ช่อง Bein HD 12',
     ];
 
     const channelLogos = [
@@ -104,7 +132,22 @@
       'https://rentapi.blackboxsys.net/images/png/epl-2.png', 'https://rentapi.blackboxsys.net/images/png/epl-2bkp.png',
       'https://rentapi.blackboxsys.net/images/png/epl-3.png', 'https://rentapi.blackboxsys.net/images/png/epl-3bkp.png',
       'https://rentapi.blackboxsys.net/images/png/epl-4.png', 'https://rentapi.blackboxsys.net/images/png/epl-4bkp.png',
-      'https://rentapi.blackboxsys.net/images/png/epl-5.png', 'https://rentapi.blackboxsys.net/images/png/epl-5bkp.png'
+      'https://rentapi.blackboxsys.net/images/png/epl-5.png', 'https://rentapi.blackboxsys.net/images/png/epl-5bkp.png',
+      'https://static.uflixtv.com/images/tv/png/epl-bein1.png', 'https://static.uflixtv.com/images/tv/png/epl-bein1bkp.png',
+      'https://static.uflixtv.com/images/tv/png/epl-bein2.png', 'https://static.uflixtv.com/images/tv/png/epl-bein2bkp.png',
+      'https://static.uflixtv.com/images/tv/png/epl-bein3.png', 'https://static.uflixtv.com/images/tv/png/epl-bein3bkp.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-bein1.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-bein2.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-bein3.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-bein4.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-bein5.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-bein6.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-bein7.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-bein8.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-bein9.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-bein10.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-bein11.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-bein12.png',
     ];
 
     // กำหนด playBaseUrls เอง
@@ -118,7 +161,25 @@
       'https://cloud.ufxtv.com/api/tv/channels/play/?c=uflix-epl4&kauth=',
       'https://cloud.ufxtv.com/api/tv/channels/play/?c=uflix-epl4bkp&kauth=',
       'https://cloud.ufxtv.com/api/tv/channels/play/?c=uflix-epl5&kauth=',
-      'https://cloud.ufxtv.com/api/tv/channels/play/?c=uflix-epl5bkp&kauth='
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=uflix-epl5bkp&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=uflix-bein1&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=epl-bein1&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=uflix-bein2&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=epl-bein2&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=uflix-bein3&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=epl-bein3&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-bein1&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-bein2&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-bein3&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-bein4&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-bein5&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-bein6&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-bein7&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-bein8&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-bein9&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-bein10&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-bein11&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-bein12&kauth=',
     ];
 
     // ฟังก์ชันดึง playlist URL
@@ -131,7 +192,7 @@
 
     // ดึง session ใหม่
     async function login() {
-      const response = await fetch('https://cloud.ufxtv.com/api/user/login/?user_email=BE0268&user_password=1111&kauth=');
+      const response = await fetch('https://cloud.ufxtv.com/api/user/login/?user_email=BE0341&user_password=1111&kauth=');
       const text = await response.text();
       const sessionMatch = text.match(/<user_loggedsession>(.*?)<\/user_loggedsession>/);
       return sessionMatch ? sessionMatch[1] : null;
@@ -151,7 +212,7 @@
       button.tabIndex = 0;  // ทำให้ปุ่มสามารถรับโฟกัสได้
       button.innerHTML = ` 
         <img src="${channelLogos[index]}" alt="${channelNames[index]}">
-        <div>${channelNames[index]}</div>
+        <div>${`${index+1}. `+channelNames[index]}</div>
       `;
       button.onclick = () => loadChannel(fixedUrl);
       button.onkeydown = (e) => {
@@ -211,6 +272,7 @@
     })();
 
     // การควบคุมโดยใช้ปุ่มลูกศร
+    let currentKey = ''
     document.addEventListener('keydown', (e) => {
       const buttons = document.querySelectorAll('.channel-button');
       if (e.key === 'ArrowDown') {
@@ -226,6 +288,30 @@
         selectedIndex = (selectedIndex + 1) % buttons.length; // เลื่อนขวา 1 ช่อง
         buttons[selectedIndex].focus();
       }
+
+
+      
+  if (!isNaN(e.key)) {
+      currentKey += e.key;  
+      showChannelNumber(parseInt(currentKey)); 
+  } else {
+    currentKey = ''
+  }
+
+    // แสดงหมายเลขช่องที่เลือก
+    function showChannelNumber(channelNumber) {
+    channelNumberDiv.textContent = channelNumber;
+    channelNumberDiv.style.display = 'flex';
+    setTimeout(() => {
+      channelNumberDiv.style.display = 'none';
+      currentKey = '';
+      // เริ่มเล่นช่องหลังจากการแสดงหมายเลข
+      const button = buttons[channelNumber - 1];
+      button.click(); // คลิกที่ช่อง
+      button.focus(); // ให้โฟกัสที่ปุ่มช่อง
+      loadChannel(buttons[channelNumber - 1].getAttribute('data-url')); // ใช้ data-url เพื่อระบุลิงก์ช่อง
+    }, 3000);
+  }
     });
 
     // เพิ่มการเข้าสู่โหมด fullscreen เมื่อ video เริ่มเล่น
