--- a/test2.html
+++ b/test2.html
@@ -69,10 +69,13 @@
 <body>
 
     <video id="video" controls autoplay muted></video>
-
+    
+    <div id="categories" class="channels"></div>
   <div class="channels" id="channels"></div>
 
   <div id="channelNumber" class="channel-number">12</div>
+
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
@@ -108,6 +111,22 @@
     const channelsDiv = document.getElementById('channels');
     let selectedIndex = 0;
 
+    const categories = [
+  {
+    name: 'พรีเมียร์ลีก',
+    channels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], // index จาก channelNames/playBaseUrls
+  },
+  {
+    name: 'Bein Sport',
+    channels: [10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27],
+  },
+  {
+    name: 'Digital Tv',
+    channels: [28,29,30,31,32,33,34,35,36,37,38,38,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63],
+  }
+];
+
+
     const channelNames = [
       'ช่อง EPL 1', 'ช่อง EPL 1 Backup', 'ช่อง EPL 2', 'ช่อง EPL 2 Backup',
       'ช่อง EPL 3', 'ช่อง EPL 3 Backup', 'ช่อง EPL 4', 'ช่อง EPL 4 Backup',
@@ -125,6 +144,42 @@
       'ช่อง Bein HD 10',
       'ช่อง Bein HD 11',
       'ช่อง Bein HD 12',
+      'ช่อง CH3 HD',
+      'ช่อง CH3 HD Backup',
+      'ช่อง CH5 HD',
+      'ช่อง CH5 HD Backup',
+      'ช่อง CH7 HD',
+      'ช่อง CH7 HD Backup',
+      'ช่อง CH9 HD',
+      'ช่อง CH9 HD Backup',
+      'ช่อง WorkPoint HD',
+      'ช่อง WorkPoint HD Backup',
+      'ช่อง GMM HD',
+      'ช่อง GMM HD Backup',
+      'ช่อง MONO HD',
+      'ช่อง MOMO HD Backup',
+      'ช่อง CH8 HD',
+      'ช่อง CH8 HD Backup',
+      'ช่อง ONE HD',
+      'ช่อง ONE HD Backup',
+      'ช่อง Amarin TV HD',
+      'ช่อง Amarin TV HD Backup',
+      'ช่อง Thairath TV HD',
+      'ช่อง Thairath TV HD Backup',
+      'ช่อง PPTV HD',
+      'ช่อง PPTV HD Backup',
+      'ช่อง TRUE 4 U HD',
+      'ช่อง TRUE 4 U HD Backup',
+      'ช่อง Nation TV HD',
+      'ช่อง Nation TV HD Backup',
+      'ช่อง JKN TV HD',
+      'ช่อง JKN TV HD Backup',
+      'ช่อง TNN TV HD',
+      'ช่อง TNN TV HD Backup',
+      'ช่อง Thai PBS TV HD',
+      'ช่อง Thai PBS TV HD Backup',
+      'ช่อง NBT TV HD',
+      'ช่อง NBT TV HD Backup',
     ];
 
     const channelLogos = [
@@ -148,6 +203,42 @@
       'https://static.uflixtv.com/images/tv/channels_icons/hd-bein10.png',
       'https://static.uflixtv.com/images/tv/channels_icons/hd-bein11.png',
       'https://static.uflixtv.com/images/tv/channels_icons/hd-bein12.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-ch3.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-ch3bkp.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-ch5.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-ch5bkp.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-ch7.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-ch7bkp.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-mcot.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-mcotbkp.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-workpoint.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-workpointbkp.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/sd-gmmchannel.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/sd-gmmchannelbkp.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-mono.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-monobkp.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-ch8.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-ch8bkp.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-gmmone.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-gmmonebkp.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-amarin.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-amarinbkp.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-thairath.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-thairathbkp.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-pptv.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-pptvbkp.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/sd-24u.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/th-24u.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/sd-nation.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/sd-nationbkp.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/sd-new.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/sd-newbkp.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/sd-tnn24.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/sd-tnn24bkp.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/hd-tpbs.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/th-tpbs.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/sd-nbt.png',
+      'https://static.uflixtv.com/images/tv/channels_icons/sd-nbtbkp.png',
     ];
 
     // กำหนด playBaseUrls เอง
@@ -180,6 +271,42 @@
       'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-bein10&kauth=',
       'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-bein11&kauth=',
       'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-bein12&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-ch3&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-ch3bkp&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-ch5&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-ch5bkp&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-ch7&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-ch7bkp&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-mcot&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-mcotbkp&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-workpoint&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-workpointbkp&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=sd-gmmchannel&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=sd-gmmchannelbkp&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-mono&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-monobkp&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-ch8&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-ch8bkp&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-gmmone&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-gmmonebkp&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-amarin&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-amarinbkp&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-thairath&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-thairathbkp&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-pptv&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-pptvbkp&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=sd-24u&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=th-24u&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=sd-nation&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=sd-nationbkp&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=sd-new&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=sd-newbkp&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=sd-tnn24&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=sd-tnn24bkp&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=hd-tpbs&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=th-tpbs&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=sd-nbt&kauth=',
+      'https://cloud.ufxtv.com/api/tv/channels/play/?c=sd-nbtbkp&kauth=',
     ];
 
     // ฟังก์ชันดึง playlist URL
@@ -203,6 +330,47 @@
       const match = xml.match(/<clear_url>(.*?)<\/clear_url>/);
       return match ? match[1] : null;
     }
+
+    function renderCategories() {
+  const categoriesDiv = document.getElementById('categories');
+  categoriesDiv.innerHTML = '';
+  categoriesDiv.style.display = 'flex';
+  channelsDiv.style.display = 'none';
+
+  categories.forEach((cat, idx) => {
+    const button = document.createElement('div');
+    button.classList.add('channel-button');
+    button.tabIndex = 0;
+    button.innerHTML = `<div>${idx + 1}. ${cat.name}</div>`;
+    button.onclick = () => showChannelsInCategory(idx);
+    button.onkeydown = (e) => {
+      if (e.key === 'Enter') showChannelsInCategory(idx);
+    };
+    categoriesDiv.appendChild(button);
+  });
+}
+
+function showChannelsInCategory(catIndex) {
+  const category = categories[catIndex];
+  channelsDiv.innerHTML = '';
+  channelsDiv.style.display = 'flex';
+  document.getElementById('categories').style.display = 'none';
+
+  category.channels.forEach(i => renderPlaylist(i));
+
+  // เพิ่มปุ่มย้อนกลับ
+  const backBtn = document.createElement('div');
+  backBtn.classList.add('channel-button');
+  backBtn.innerHTML = '🔙 ย้อนกลับ';
+  backBtn.tabIndex = 0;
+  backBtn.onclick = renderCategories;
+  backBtn.onkeydown = (e) => {
+    if (e.key === 'Enter') renderCategories();
+  };
+  channelsDiv.appendChild(backBtn);
+}
+
+
 
     // แสดงผลลัพธ์แบบ playlist
     function renderPlaylist(index) {
@@ -273,14 +441,9 @@ let session = null;
     return;
   }
 
-  // แสดงปุ่มทุกช่องล่วงหน้า (ยังไม่โหลด video)
-  for (let i = 0; i < playBaseUrls.length; i++) {
-    renderPlaylist(i);
-  }
-
-  // เล่นช่องแรกทันที
-  loadChannelByIndex(0);
+  renderCategories(); // ไม่ต้องโหลดช่องทั้งหมดทันที
 })();
+
 
     // การควบคุมโดยใช้ปุ่มลูกศร
     let currentKey = ''
@@ -311,18 +474,36 @@ let session = null;
 
     // แสดงหมายเลขช่องที่เลือก
     function showChannelNumber(channelNumber) {
-    channelNumberDiv.textContent = channelNumber;
-    channelNumberDiv.style.display = 'flex';
+  channelNumberDiv.textContent = channelNumber;
+  channelNumberDiv.style.display = 'flex';
+
+  setTimeout(() => {
+    channelNumberDiv.style.display = 'none';
+    currentKey = '';
+
+    const index = channelNumber - 1;
+    if (index < 0 || index >= channelNames.length) return;
+
+    // หา category ที่ช่องนี้อยู่
+    const catIndex = categories.findIndex(cat => cat.channels.includes(index));
+    if (catIndex === -1) return;
+
+    // แสดงหมวดหมู่ที่เกี่ยวข้อง
+    showChannelsInCategory(catIndex);
+
+    // เล่นช่องทันที
     setTimeout(() => {
-      channelNumberDiv.style.display = 'none';
-      currentKey = '';
-      // เริ่มเล่นช่องหลังจากการแสดงหมายเลข
-      const button = buttons[channelNumber - 1];
-      button.click(); // คลิกที่ช่อง
-      button.focus(); // ให้โฟกัสที่ปุ่มช่อง
-      loadChannel(buttons[channelNumber - 1].getAttribute('data-url')); // ใช้ data-url เพื่อระบุลิงก์ช่อง
-    }, 3000);
-  }
+      loadChannelByIndex(index);
+
+      const buttons = document.querySelectorAll('.channel-button');
+      const btn = Array.from(buttons).find(b => b.innerText.includes(channelNames[index]));
+      if (btn) {
+        btn.focus();
+      }
+    }, 300); // หน่วงเวลาเล็กน้อยเพื่อให้ปุ่มถูกเรนเดอร์ก่อน
+  }, 1000); // แสดงหมายเลขก่อนโหลด
+}
+
     });
 
     // เพิ่มการเข้าสู่โหมด fullscreen เมื่อ video เริ่มเล่น
