--- a/test2.html
+++ b/test2.html
@@ -311,19 +311,34 @@
 
     // ฟังก์ชันดึง playlist URL
     async function getPlaylist(user_loggedsession, playBaseUrl) {
-      const playUrl = `${playBaseUrl}&user_loggedsession=${user_loggedsession}`;
-      const response = await fetch(playUrl);
-      const text = await response.text();
-      return text.includes('<clear_url>') ? text : null;
-    }
+  let playUrl = `${playBaseUrl}&user_loggedsession=${user_loggedsession}`;
+  let response = await fetch(playUrl);
+  let text = await response.text();
 
-    // ดึง session ใหม่
-    async function login() {
-      const response = await fetch('https://cloud.ufxtv.com/api/user/login/?user_email=BE0341&user_password=1111&kauth=');
-      const text = await response.text();
-      const sessionMatch = text.match(/<user_loggedsession>(.*?)<\/user_loggedsession>/);
-      return sessionMatch ? sessionMatch[1] : null;
-    }
+  // เช็คว่า session failed หรือไม่
+  if (text.includes('session failed')) {
+    // ถ้า session failed ให้ login ใหม่เพื่อเอา session ใหม่
+    user_loggedsession = await login();
+    
+    // สร้าง playUrl ใหม่ด้วย session ที่ได้จาก login
+    playUrl = `${playBaseUrl}&user_loggedsession=${user_loggedsession}`;
+    
+    // ทำการร้องขออีกครั้ง
+    response = await fetch(playUrl);
+    text = await response.text();
+  }
+
+  return text.includes('<clear_url>') ? text : null;
+}
+
+// ดึง session ใหม่
+async function login() {
+  const response = await fetch('https://cloud.ufxtv.com/api/user/login/?user_email=BE0341&user_password=1111&kauth=');
+  const text = await response.text();
+  const sessionMatch = text.match(/<user_loggedsession>(.*?)<\/user_loggedsession>/);
+  return sessionMatch ? sessionMatch[1] : null;
+}
+
 
     // ดึง clear_url จาก response XML
     function extractClearUrl(xml) {
@@ -412,6 +427,7 @@ function showChannelsInCategory(catIndex) {
 }
 
 
+let session = null;
     // Main
     async function loadChannelByIndex(index) {
   if (!session) {
@@ -433,7 +449,6 @@ function showChannelsInCategory(catIndex) {
 }
 
 // ฟังก์ชันหลัก
-let session = null;
 (async () => {
   session = await login();
   if (!session) {
