Update pornbox.html -/ภ-/ภ-/ภ

--- a/pornbox.html
+++ b/pornbox.html
@@ -1,45 +1,80 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-<meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>playlist</title>
-	</head>
-	
+    <title>Playlist</title>
     <style>
         .hidden-link {
             display: none;
-            }
+        }
         .invisible-link {
             visibility: hidden;
         }
- </style>
-<style>.hiddenx-link {
-
-#EXTM3U 
-
-########################################
-ช่องกีฬาทั่วไป
-########################################
-
-#EXTINF:-1 group-title="ช่องกีฬาทั่วไป" tvg-logo="https://rentapi.blackboxsys.net/images/png/epl-1.png",EPL 01
-#EXTVLCOPT:http-referrer=https://99dooball.com/
-https://cdn2.aws-live-streaming.com/lsmscore/epl1_sd/chunks.m3u8
-
-#EXTINF:-1 group-title="ช่องกีฬาทั่วไป" tvg-logo="https://rentapi.blackboxsys.net/images/png/epl-1.png",EPL 02
-#EXTVLCOPT:http-referrer=https://cloud.ufxtv.com/
-#EXTVLCOPT:http-user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/134.0.0.0 Safari/537.36
-#EXTVLCOPT:http-origin=https://cloud.ufxtv.com
-#EXTVLCOPT:http-accept=*/*
-#EXTVLCOPT:http-accept-encoding=gzip, deflate, br, zstd
-#EXTVLCOPT:http-accept-language=en-US,en;q=0.9,th;q=0.8
-https://live-sg2.aws-stream.com:9318/v3/MuUeRQlX8FNNXwKILcBqkA/1744042639/5a4a06c4c9dec85ca749eb9760529f8d/OvgGPo3waq2XZY7fuXjVRQ/1744064219/live/vx-origin/uflix-epl1_720/chunks.m3u8
-
-}</style>
-
+    </style>
+</head>
 <body bgcolor="FFFFFF">
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="refresh" content="0;url=https://www.google.co.th/"> 
+<pre id="playlistOutput"></pre> <!-- สำหรับแสดงผล playlist -->
+
+<script>
+    const loginUrl = 'https://cloud.ufxtv.com/api/user/login/?user_email=BE0268&user_password=1111&kauth=';
+    const playBaseUrl = 'https://cloud.ufxtv.com/api/tv/channels/play/?c=uflix-epl1&kauth=';
+
+    // ฟังก์ชันดึง playlist URL
+    async function getPlaylist(user_loggedsession) {
+        const playUrl = `${playBaseUrl}&user_loggedsession=${user_loggedsession}`;
+        const response = await fetch(playUrl);
+        const text = await response.text();
+        return text.includes('<clear_url>') ? text : null;
+    }
+
+    // ดึง session ใหม่
+    async function login() {
+        const response = await fetch(loginUrl);
+        const text = await response.text();
+        const sessionMatch = text.match(/<user_loggedsession>(.*?)<\/user_loggedsession>/);
+        return sessionMatch ? sessionMatch[1] : null;
+    }
+
+    // ดึง clear_url จาก response XML
+    function extractClearUrl(xml) {
+        const match = xml.match(/<clear_url>(.*?)<\/clear_url>/);
+        return match ? match[1] : null;
+    }
+
+    // แสดงผลลัพธ์แบบ playlist
+    function renderPlaylist(clearUrl) {
+        const fixedUrl = clearUrl.replace('playlist.m3u8', 'chunks.m3u8');
+        const output = `
+#EXTM3U
+
+########################################
+### Uflix ### 
+########################################
+
+#EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-1.png",EPL-1
+${fixedUrl}
+        `;
+        document.getElementById('playlistOutput').textContent = output.trim();
+    }
+
+    // เริ่มต้นกระบวนการ
+    (async function() {
+        const session = await login();
+        if (session) {
+            const xmlData = await getPlaylist(session);
+            const clearUrl = extractClearUrl(xmlData);
+            if (clearUrl) {
+                renderPlaylist(clearUrl);
+            } else {
+                console.error("ไม่พบ clear_url ในข้อมูลที่ได้รับ");
+            }
+        } else {
+            console.error("ไม่สามารถเข้าสู่ระบบได้");
+        }
+    })();
+</script>
+
 </body>
 </html>
